fix dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,3 +34,7 @@ body.dark {
   --titleColor: #fff;
   --bgColor: rgb(23 23 23);
 }
+
+body {
+  background-color: var(--bgColor);
+}
